--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,9 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### User Configuration ###
+application-local.yml
+application-local.yaml
+application-prod.yml
+application-prod.yamlcal.yaml
