--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -9,3 +9,11 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+kakao:
+  client-id: "328f2a75113391c0c57338f9e804a4e0"
+  client-secret: "a7tYmwTA8f2tf4YHsjHGAEhLpKTUMCY1"
+  redirect-uri: http://localhost:8080/api/auth/kakao/callback
+  authorize-uri: https://kauth.kakao.com/oauth/authorize
+  token-uri: https://kauth.kakao.com/oauth/token
+  user-info-uri: https://kapi.kakao.com/v2/user/me
