--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,18 @@
-HELP.md
-.gradle
+### IntelliJ IDEA ###
+.idea/
+*.iws
+*.iml
+*.ipr
+out/
+
+### Gradle ###
+.gradle/
 build/
-!../gradle/wrapper/gradle-wrapper.jar
+!gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### STS ###
+### STS / Eclipse ###
 .apt_generated
 .classpath
 .factorypath
@@ -14,17 +21,6 @@ build/
 .springBeans
 .sts4-cache
 bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
-
-### IntelliJ IDEA ###
-../.idea
-*.iws
-*.iml
-*.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
 
 ### NetBeans ###
 /nbproject/private/
@@ -36,8 +32,11 @@ out/
 ### VS Code ###
 .vscode/
 
-### User Configuration ###
+### Mac OS ###
+.DS_Store
+
+### Local Configuration (절대 올리면 안 됨) ###
 application-local.yml
 application-local.yaml
-application-prod.yml
-application-prod.yaml
+application-secret.yml
+application-secret.yaml
