--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://엔드포인트주소:3306/classiverse_prod
+    url: jdbc:mysql://classiverse-prod-db.cd4i4aicm850.ap-northeast-2.rds.amazonaws.com:3306/classiverse_prod
     username: admin
     password: ${PROD_DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
