--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,3 +9,6 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+app:
+  frontend-redirect-url: http://localhost:5173/login-success
